test/files/neg/t7509.check
t7509.scala:3: error: inferred type arguments [Int] do not conform to method crash's type parameter bounds [R <: AnyRef]
  crash(42)
  ^
t7509.scala:3: error: type mismatch;
 found   : 42.type (with underlying type Int)
 required: R
  crash(42)
        ^
t7509.scala:3: error: could not find implicit value for parameter ev: R
  crash(42)
       ^
three errors found
